--- a/src/pages/produkt/sykepenger/sykepenger-2.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-2.njk
@@ -51,23 +51,36 @@ variant: '2'
     </nav>
 
     {# Sticky Chapter TOC #}
-    <div class="sticky top-0 z-10 isolate" x-show="showToc">
-      <div class="absolute z-20 px-3 -translate-x-1/2 left-1/2 top-3 inset-x">
-        <button class="mx-auto justify-center pr-3 pl-4 py-1.5 flex gap-1 items-center rounded-full bg-slate-700 text-white hover:bg-slate-500" x-bind:class="expandToc && 'w-full'" type="button" x-on:click="expandToc = !expandToc">
-          <span>Innhold på siden</span>
-          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5') | safe }}
-        </button>
-      </div>
+    <div class="sticky top-0 z-10 isolate" x-show="showToc" aria-hidden="true">
+      <div class="absolute inset-x-0 top-0 h-12 pointer-events-none bg-gradient-to-b from-white to-white/0"></div>
+      <button class="absolute z-20 left-1/2 top-1 px-3 -translate-x-1/2  mx-auto justify-center whitespace-nowrap pr-3 pl-4 py-1.5 flex gap-1 items-center rounded-full bg-slate-700 text-white hover:bg-slate-500" type="button" x-on:click="expandToc = !expandToc">
+        <span>Innhold på siden</span>
+        {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5') | safe }}
+      </button>
       <div class="absolute inset-x-0 top-0 z-10 px-3 pt-20 pb-4 rounded-b-lg" x-bind:class="expandToc ? 'bg-slate-600 text-white shadow-lg' : 'hidden'">
         <ol class="grid gap-2 toc toc--multi toc--sticky" x-show="expandToc">
-        {% for chapter in chapters.slice(0, -1) %}
-        <li>
-          <a class="flex gap-1 p-1 underline group hover:text-blue-50 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}" x-on:click="expandToc = false">
-            {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('w-5 h-5') | safe }}
-            {{ chapter.data.title }}
-          </a>
-        </li>
-        {% endfor %}
+          {% for chapter in chapters.slice(0, -1) %}
+          <li>
+            <a 
+              class="flex gap-1 p-1 underline group hover:text-blue-50 text-base/snug hover:no-underline" 
+              href="#{{ chapter.data.title | slugify }}" 
+              x-on:click="expandToc = false"
+            >
+              {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('w-5 h-5') | safe }}
+              {{ chapter.data.title }}
+            </a>
+          </li>
+          {% endfor %}
+          <li class="pt-2 mt-1 border-t border-slate-400/25">
+            <a 
+              class="flex gap-1 p-1 underline group hover:text-blue-50 text-base/snug hover:no-underline" 
+              href="{{ page.url }}" 
+              x-on:click="expandToc = false"
+            >
+              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('translate-y-px w-5 h-5') | safe }}
+              Til toppen av siden
+            </a>
+          </li>
         </ol>
       </div>
     </div>
