--- a/src/pages/produkt/sykepenger/sykepenger-1.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-1.njk
@@ -34,7 +34,7 @@ variant: '1'
     <div class="my-8">
       <h2 class="pb-2 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-4 py-1">
-        {% for chapter in chapters %}
+        {% for chapter in chapters.slice(0, -1) %}
         <li class="flex items-start gap-2">
           <a class="flex gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
             {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('-translate-y-px') | safe }}
@@ -76,18 +76,28 @@ variant: '1'
           </ul>
           <div class="" x-data="{ dropdownOpen: false }">
             <button class="flex items-center gap-1 py-1 pl-3 pr-2 text-base text-blue-500 rounded-md bg-slate-100 hover:bg-blue-50 hover:text-blue-700 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
-              <span>Velg kapittel</span>
+              <span>Bytt kapittel</span>
               {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 group-aria-expanded:rotate-180') | safe }}
             </button>
             <ol class="absolute left-0 w-screen border border-slate-300/5 max-w-sm py-1.5 mt-0.5 rounded-md shadow-xl top-full bg-slate-100" x-show="dropdownOpen" x-on:click.outside="dropdownOpen = false">
               {% for chapter in chapters %}
               <li class="border-t border-slate-200 first:border-t-0">
-                <a class="flex items-center px-1 py-2 font-semibold hover:bg-blue-50 hover:text-blue-700 {{ 'text-slate-700' if loop.index === chapterIndex else 'text-blue-500' }}" href="#{{ chapter.data.title | slugify }}" x-on:click="dropdownOpen = false">
+                <a class="flex items-center gap-1 px-1 py-2 font-semibold hover:bg-blue-50 hover:text-blue-700 {{ 'text-slate-700' if loop.index === chapterIndex else 'text-blue-500' }}" href="#{{ chapter.data.title | slugify }}" x-on:click="dropdownOpen = false">
                   {{ '/src/_includes/svg/icons/dot.svg' | svgContents('' if loop.index === chapterIndex else 'text-transparent') | safe }}
-                  {{ chapter.data.title }}
+                  <span>{{ chapter.data.title }}</span>
                 </a>
               </li>
               {% endfor %}
+              <li class="pt-3 border-t border-slate-400/25">
+                <a 
+                  class="flex items-center gap-1 px-1 py-2 text-blue-500 group hover:bg-blue-50 hover:text-blue-700 hover:underline" 
+                  href="{{ page.url }}" 
+                  x-on:click="dropdownOpen = false"
+                >
+                  {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('-translate-y-px') | safe }}
+                  <span>Til toppen av siden</span>
+                </a>
+              </li>
             </ol>
           </div>
         </nav>
