--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full antialiased bg-white font-[375] font-sans motion-safe:scroll-smooth scroll-pt-16">
+<html lang="no" class="h-full antialiased bg-white font-[390] font-sans motion-safe:scroll-smooth scroll-pt-16">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
@@ -27,7 +27,7 @@
     {%- block script -%}{%- endblock -%}
   </head>
   <body
-    id="toppen" class="min-h-full text-base leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, loggedIn: true, loginOpen: false, menuOpen: false, notifyOpen: false, newNotifications: true }">
+    id="toppen" class="min-h-full text-base leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, loggedIn: false, loginOpen: false, menuOpen: false, notifyOpen: false, newNotifications: true }">
     {%- if environment === 'production' -%}
     {%- include "partials/banner.njk" -%}
     {%- endif -%}
