--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,22 +4,19 @@
 
 @layer base {
   
-  /* @link https://utopia.fyi/type/calculator?c=320,18,1.125,1200,20,1.2,6,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+/* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1280,20,1.2,0,0,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
 
   :root {
-    --step--2: clamp(0.8681rem, 0.8965rem + -0.0379vi, 0.8889rem);
-    --step--1: clamp(1rem, 0.9848rem + 0.0758vi, 1.0417rem);
-    --step-0: clamp(1.125rem, 1.0795rem + 0.2273vi, 1.25rem);
-    --step-1: clamp(1.2656rem, 1.1804rem + 0.4261vi, 1.5rem);
-    --step-2: clamp(1.4238rem, 1.287rem + 0.6839vi, 1.8rem);
-    --step-3: clamp(1.6018rem, 1.3988rem + 1.0149vi, 2.16rem);
-    --step-4: clamp(1.802rem, 1.5148rem + 1.4363vi, 2.592rem);
-    --step-5: clamp(2.0273rem, 1.6334rem + 1.9693vi, 3.1104rem);
-    --step-6: clamp(2.2807rem, 1.7528rem + 2.6396vi, 3.7325rem);
+    --text-xs: clamp(0.75rem, 0.7083rem + 0.2083vi, 0.875rem);
+    --text-sm: clamp(0.875rem, 0.8333rem + 0.2083vi, 1rem);
+    --text-md: clamp(1.125rem, 1.0833rem + 0.2083vi, 1.25rem);
+    --text-lg: clamp(1.25rem, 1.1667rem + 0.4167vi, 1.5rem);
+    --text-xl: clamp(1.75rem, 1.5833rem + 0.8333vi, 2.25rem);
+    --text-2xl: clamp(2.25rem, 2rem + 1.25vi, 3rem);
   }
 
   body {
-    @apply text-slate-700;
+    color: theme(colors.slate.700);
   }
   * {
     text-decoration-thickness: 0.0625rem;
@@ -35,28 +32,28 @@
 
 @layer components {
   :where(.prose, .accordion, .expander) > *:not(summary, h3) + * {
-    margin-block-start: 1.5em;
+    margin-block-start: 1.75em;
   }
   .prose > :where(h1, h2, h3, h4, h5) {
     text-wrap: pretty;
     font-weight: 600;
     color: theme(colors.gray.900);
-    margin-block: 1.25em 0.375em;
+    margin-block: 1.875em 0.375em;
   }
-  :is(.prose, .accordion, .expander) h3 {
-    font-size: var(--step-2);
-    line-height: 1.2;
+  :is(.prose, .accordion, .expander) > h3 {
+    font-size: var(--text-lg);
+    line-height: 1.33;
     letter-spacing: -0.0125em;
   }
   :is(.prose, .accordion, .expander) > h4 {
-    font-size: var(--step-1);
-    line-height: 1.2;
+    font-size: var(--text-md);
+    line-height: 1.33;
     letter-spacing: -0.0125em;
   }
   :is(.prose, .accordion, .expander) > h5 {
-      font-size: var(--step-0);
+      font-size: var(--text-sm);
       font-weight: 650;
-      line-height: 1.3;
+      line-height: 1.33;
       margin-block-end: 0.25em;
   }
   :where(.prose, .accordion, .expander) > :where(h3, h4, h5) + *:not(h3, h4, h5, ul, ol, details) {
@@ -148,7 +145,7 @@
     text-align: left;
     text-indent: -31px;
     text-wrap: pretty;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.375;
     text-size: theme(fontSize.lg);
     background-color: theme(colors.transparent);
@@ -276,6 +273,61 @@
   }
 
 
+
+  /* ReadMore */
+  .readmore {
+    display: grid;
+  }
+  .readmore[open] {
+    padding-block-end: 32px;
+  }
+  :where(.readmore) summary {
+    appearance: none;
+    display: flex;
+    list-style: none;
+    padding: 0.75em 12px 0.625em 42px;
+    cursor: pointer;
+    color: theme(colors.blue.600);
+    line-height: 1.375;
+    font-weight: 500;
+    text-align: left;
+    text-wrap: pretty;
+  }
+  :where(.readmore) summary::-webkit-details-marker {
+    display: none;
+  }
+  :where(.readmore[open]) summary {
+    margin-block-end: 20px;
+  }
+  :where(.readmore) summary:hover {
+  }
+  :where(.readmore) summary:before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='1.875' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    background-position: center;
+    background-repeat: no-repeat;
+    content: "";
+    display: inline-block;
+    flex-shrink: 0;
+    place-items: center;
+    align-self: baseline;
+    margin-inline: -32px 10px;
+    transition: rotate 150ms;
+    transform: translateY(0);
+    width: 22px;
+    height: 22px;
+  }
+  :where(.readmore[open]) summary:before {
+    transform: rotate(-180deg);
+  }
+  :where(.readmore) summary > * {
+    text-wrap: pretty;
+  }
+  :where(.readmore) summary > span {
+    transform: translateY(-1px);
+  }
+  :where(.readmore) > div {
+    padding-inline-start: 42px;
+  }
 
 
 
