--- a/src/pages/produkt/sykepenger/sykepenger-1.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-1.njk
@@ -1,14 +1,10 @@
 ---
 tags: ['produkt']
-description: 'Kapittelnavigasjon med «bytteknapp» i bunnen'
+description: 'Med «bytteknapp» i bunnen av hver kapittelmeny.'
 permalink: 'produkt/sykepenger/1/index.html'
 variant: '1'
 ---
 {%- extends 'base.njk' -%}
-
-{%- from "macros/button.njk" import button -%}
-{%- from "macros/microcard.njk" import microcard -%}
-{%- from "macros/tile.njk" import tile -%}
 
 {%- block content -%}
   {% set chapters = collections.all | onlyTags('sykepenger', 'innhold') | sort(false, false, 'data.order') %}
@@ -16,28 +12,24 @@ variant: '1'
   <main class="grid py-16 grid-cols-center" data-theme="sykepenger">
     <div class="col-main">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance ">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+      <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
+      <div class="mt-8 prose text-pretty max-w-prose">
+        <p class="text-lg">{{ ingress | safe }}</p>
 
-      {# Audience #}
-      {% if audience %}       
-      <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
-          For {{ audience | lower | safe }}
-        </span>
+        <div class="px-4 py-3 border rounded-lg border-slate-300 text-balance">
+          {{ audience | markdown | safe if audience }}
+        </div>
       </div>
-      {% endif %}
-
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="my-8">
+    <div class="px-4 py-3 mt-8 rounded-lg bg-slate-100">
       <h2 class="pb-2 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-4 py-1">
-        {% for chapter in chapters.slice(0, -1) %}
+        {% for chapter in chapters %}
         <li class="flex items-start gap-2">
           <a class="flex gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
-            {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('-translate-y-px') | safe }}
+            {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
             {{ chapter.data.title }}
           </a>
           {# <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span> #}
@@ -47,6 +39,10 @@ variant: '1'
       </ul>
     </div>
 
+    {# <div class="pt-6 mt-6 prose border-t col-main border-slate-200">
+      {{ audience | markdown | safe if audience }}
+    </div> #}
+
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
@@ -55,32 +51,32 @@ variant: '1'
           {{ '/src/_includes/svg/placeholder.svg' | svgContents('w-full h-auto max-w-screen-md mx-auto') | safe }}
         </div> #}
         <div class="mb-8 col-main">
-          <h2 class="mt-8 mb-3 font-bold text-3xl/tight text-balance ">{{ chapter.data.title }}</h2>
+          <h2 class="mt-8 mb-3 font-bold text-xl/tight text-balance ">{{ chapter.data.title }}</h2>
           <p>{{ chapter.data.ingress | safe }}</p>
         </div>
 
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 %}
 
-        <nav class="relative ">
-          <h3 class="py-2 font-semibold">I dette kapittelet</h3>
+        <nav class="relative px-4 py-3 rounded-lg bg-slate-100">
+          <h3 class="pb-2 font-semibold">I dette kapittelet</h3>
           <ul class="grid gap-4 py-1 pb-4">
           {% for item in chapter.templateContent | tocData %}
             <li>
               <a class="flex items-start gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
-                {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('-translate-y-px opacity-85') | safe }}
+                {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('-translate-y-0.5 opacity-85') | safe }}
                 {{ item.text }}
               </a>
             </li>
           {% endfor %}
           </ul>
           <div class="" x-data="{ dropdownOpen: false }">
-            <button class="flex items-center gap-1 py-1 pl-3 pr-2 text-base text-blue-500 rounded-md bg-slate-100 hover:bg-blue-50 hover:text-blue-700 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
+            <button class="flex items-center gap-1 py-1 pl-3 pr-2 text-base font-semibold text-blue-500 rounded-md bg-slate-100 hover:bg-blue-50 hover:text-blue-700 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
               <span>Bytt kapittel</span>
               {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 group-aria-expanded:rotate-180') | safe }}
             </button>
             <ol class="absolute left-0 w-screen border border-slate-300/5 max-w-sm py-1.5 mt-0.5 rounded-md shadow-xl top-full bg-slate-100" x-show="dropdownOpen" x-on:click.outside="dropdownOpen = false">
-              {% for chapter in chapters.slice(0, -1) %}
+              {% for chapter in chapters %}
               <li class="border-t border-slate-200 first:border-t-0">
                 <a class="flex items-center gap-1 px-1 py-2 font-semibold hover:bg-blue-50 hover:text-blue-700 {{ 'text-slate-700' if loop.index === chapterIndex else 'text-blue-500' }}" href="#{{ chapter.data.title | slugify }}" x-on:click="dropdownOpen = false">
                   {{ '/src/_includes/svg/icons/dot.svg' | svgContents('' if loop.index === chapterIndex else 'text-transparent') | safe }}
@@ -104,7 +100,7 @@ variant: '1'
       {% endif %}
 
         {# Main Content #}
-        <div class="mt-2 prose col-main">
+        <div class="prose col-main">
           {{ chapter.templateContent | markdown | safe }}
         </div>
       </section>
