--- a/src/pages/produkt/sykepenger/sykepenger-2.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-2.njk
@@ -1,14 +1,10 @@
 ---
 tags: ['produkt']
-description: 'Sticky navigasjon'
+description: 'Med sticky innholdsmeny og enkel kapittelmeny.'
 permalink: 'produkt/sykepenger/2/index.html'
 variant: '2'
 ---
 {%- extends 'base.njk' -%}
-
-{%- from "macros/button.njk" import button -%}
-{%- from "macros/microcard.njk" import microcard -%}
-{%- from "macros/tile.njk" import tile -%}
 
 {%- block content -%}
   {% set chapters = collections.all | onlyTags('sykepenger', 'innhold') | sort(false, false, 'data.order') %}
@@ -16,57 +12,59 @@ variant: '2'
   <main class="grid py-16 grid-cols-center" data-theme="sykepenger" x-data="{ showChapter1: false, showChapter2: false, showChapter3: false, showChapter4: false, showChapter5: false, showToc: false, expandToc: false }">
     <div class="col-main">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance ">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+      <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
+      <div class="mt-8 prose text-pretty max-w-prose">
+        <p class="text-lg">{{ ingress | safe }}</p>
 
-      {# Audience #}
-      {% if audience %}       
-      <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
-          For {{ audience | lower | safe }}
-        </span>
+        <div class="p-4 border rounded-lg border-slate-300 text-balance">
+          {{ audience | markdown | safe if audience }}
+        </div>
       </div>
-      {% endif %}
     </div>
 
     {# Innholdsfortegnelse #}
-    <nav 
-      class="mt-8 -mb-8 bg-white"
-      x-intersect:enter.margin.-5px.0%.0%.0%="showToc = false"
-      x-intersect:leave.margin.-5px.0%.0%.0%="showToc = true"
-    >
+    <nav class="px-4 py-3 mt-8 rounded-lg bg-slate-100" x-intersect:enter.margin.-5px.0%.0%.0%="showToc = false" x-intersect:leave.margin.-5px.0%.0%.0%="showToc = true">
       <h2 class="pb-2 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-4 py-1">
-        {% for chapter in chapters.slice(0, -1) %}
-        <li class="flex items-start gap-2">
-          <a class="flex gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
-            {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('w-5 h-5') | safe }}
+        {% for chapter in chapters %}
+        <li class="grid">
+          <a class="flex gap-1 p-1 -m-1 font-medium text-blue-500 underline group hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}">
+            {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
             {{ chapter.data.title }}
           </a>
           {# <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span> #}
-          {# <p class="pr-4 mt-1.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p> #}
+          <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p>
         </li>
         {% endfor %}
       </ul>
     </nav>
 
     {# Sticky Chapter TOC #}
-    <div class="sticky top-0 z-10 isolate" x-show="showToc" aria-hidden="true">
-      <div class="absolute inset-x-0 top-0 h-12 pointer-events-none bg-gradient-to-b from-white to-white/0"></div>
-      <button class="absolute z-20 left-1/2 top-1 px-3 -translate-x-1/2  mx-auto justify-center whitespace-nowrap pr-3 pl-4 py-1.5 flex gap-1 items-center rounded-full bg-slate-700 text-white hover:bg-slate-500" type="button" x-on:click="expandToc = !expandToc">
+    <div 
+      class="sticky top-0 z-10 shadow-lg isolate col-full" 
+      aria-hidden="true"
+      x-show="showToc"
+      x-transition:enter="transition ease-out duration-200"
+      x-transition:enter-start="opacity-0 -translate-y-full"
+      x-transition:enter-end="opacity-100 translate-y-0"
+    >
+      <button class="relative col-full w-full z-20 px-3 whitespace-nowrap py-1.5 justify-center flex gap-1 items-center bg-slate-100 hover:bg-slate-200" type="button" x-on:click="expandToc = !expandToc">
         <span>Innhold på siden</span>
         {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5') | safe }}
       </button>
-      <div class="absolute inset-x-0 top-0 z-10 px-3 pt-20 pb-4 rounded-b-lg" x-bind:class="expandToc ? 'bg-slate-600 text-white shadow-lg' : 'hidden'">
-        <ol class="grid gap-2 toc toc--multi toc--sticky" x-show="expandToc">
-          {% for chapter in chapters.slice(0, -1) %}
+      <div 
+        class="absolute inset-x-0 top-0 z-10 grid px-3 pt-20 pb-8 rounded-b-lg grid-cols-center" 
+        x-bind:class="expandToc ? 'bg-slate-100 shadow-lg' : 'hidden'"
+      >
+        <ol class="grid gap-2 toc toc--multi toc--sticky">
+          {% for chapter in chapters %}
           <li>
             <a 
-              class="flex gap-1 p-1 underline group hover:text-blue-50 text-base/snug hover:no-underline" 
+              class="flex gap-1 p-1 underline group text-base/snug hover:no-underline" 
               href="#{{ chapter.data.title | slugify }}" 
               x-on:click="expandToc = false"
             >
-              {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('w-5 h-5') | safe }}
+              {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('w-5 h-5') | safe }}
               {{ chapter.data.title }}
             </a>
           </li>
@@ -85,6 +83,10 @@ variant: '2'
       </div>
     </div>
 
+    {# <div class="pt-6 mt-6 prose border-t col-main border-slate-200">
+      {{ audience | markdown | safe if audience }}
+    </div> #}
+
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
@@ -96,17 +98,17 @@ variant: '2'
         x-intersect:leave.margin.-20%.0px.-60%.0px="showChapter{{ chapterIndex }} = false"
       >
         <div class="col-main">
-          <h2 class="mt-8 mb-3 font-bold text-3xl/tight text-balance ">{{ chapter.data.title }}</h2>
+          <h2 class="mt-8 mb-3 font-bold text-xl/tight text-balance ">{{ chapter.data.title }}</h2>
           <p class="mb-6">{{ chapter.data.ingress | safe }}</p>
 
           {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 %}
-            <nav>
+            <nav class="px-5 py-3 rounded-lg bg-slate-100">
               <h3 class="font-semibold">I dette kapittelet</h3>
               <ul class="grid gap-1">
                 {% for item in chapter.templateContent | tocData %}
                 <li>
-                  <a class="flex gap-1 py-1 -mx-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
-                    {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('w-5 h-5') | safe }}
+                  <a class="flex gap-1 py-1 -mx-1 text-blue-500 underline group hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ item.id }}">
+                    {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
                     {{ item.text }}
                   </a>
                 </li>
