--- a/_excluded/soknad-og-skjema/arbeidsgiver/arbeidsgiver.njk
+++ b/_excluded/soknad-og-skjema/arbeidsgiver/arbeidsgiver.njk
@@ -228,7 +228,7 @@ permalink: false
               Klage eller anke på vedtak?
             </h3>
             <p class="mt-2 max-w-prose">Hvis du har fått et vedtak fra NAV og du er uenig i vedtaket, har du rett til å klage eller anke.</p>
-            <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:no-underline fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
+            <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:decoration-2 fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
           </div>
         </div>
       </div>
