--- a/_excluded/soknad-og-skjema/privat/generisk-mellomsteg.njk
+++ b/_excluded/soknad-og-skjema/privat/generisk-mellomsteg.njk
@@ -39,7 +39,7 @@
       <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
         <div class="mt-12 text-lg max-w-prose markup">
           <p>Søknad starter her …</p>
-          <p class="mt-12"><a class="text-blue-500 underline hover:no-underline" href="/soknad-og-skjema/">Tilbake</a>
+          <p class="mt-12"><a class="text-blue-500 underline hover:decoration-2" href="/soknad-og-skjema/">Tilbake</a>
         </div>
 
       </div>
