--- a/_excluded/soknad-og-skjema/samarbeidspartner/rolle.njk
+++ b/_excluded/soknad-og-skjema/samarbeidspartner/rolle.njk
@@ -81,7 +81,7 @@
         <div class="md:col-start-1 md:col-end-9">
           <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
           <p class="mt-2 text-sm tracking-wider text-gray-700 uppercase">{{ kicker | safe }}</p>
-          <p class="max-w-2xl mt-6 text-xl md:text-2xl">{{ description | safe }}. <a class="text-blue-500 underline hover:no-underline hover:text-deepblue-600" href="/soknad-og-skjema-samarbeidspartner/">Bytt rolle</a>.</p>
+          <p class="max-w-2xl mt-6 text-xl md:text-2xl">{{ description | safe }}. <a class="text-blue-500 underline hover:decoration-2 hover:text-deepblue-600" href="/soknad-og-skjema-samarbeidspartner/">Bytt rolle</a>.</p>
         </div>
 
 
