--- a/_excluded/soknad/dagpenger/dagpenger.njk
+++ b/_excluded/soknad/dagpenger/dagpenger.njk
@@ -65,7 +65,7 @@
 
           {% if pagination.pageNumber >= 1 %}
           <div class="mt-8">
-            <a class="font-semibold text-blue-500 underline hover:no-underline hover:text-deepblue-600" href="/soknad/dagpenger/">Tilbake</a>
+            <a class="font-semibold text-blue-500 underline hover:decoration-2 hover:text-deepblue-600" href="/soknad/dagpenger/">Tilbake</a>
           </div>
           {% endif %}
         </div>
