--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -19,7 +19,7 @@ permalink: '/omrade/arbeid/index.html'
     </div>
     <div class="grid grid-flow-row-dense pt-8 pb-16 grid-cols-center">
       <div class="mb-12 col-wide lg:col-side">
-        <a class="block px-5 py-4 font-semibold leading-snug text-blue-600 underline bg-red-100 rounded-lg hover:text-blue-500 hover:no-underline" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
+        <a class="block px-5 py-4 font-semibold leading-snug text-blue-600 underline bg-red-100 rounded-lg hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
       </div>
 
       <div class="col-wide lg:col-main">
