--- a/_excluded/pleiepenger/pleiepenger-a.njk
+++ b/_excluded/pleiepenger/pleiepenger-a.njk
@@ -34,7 +34,7 @@ permalink: 'produkt/pleiepenger/a/index.html'
       <ul class="grid mt-2">
         {% for chapter in chapters.slice(0,4) %}
         <li class="relative grid items-center bg-slate-100 px-5 group hover:bg-blue-50 {{ 'rounded-t-xl pt-4 pb-2.5' if loop.first }} {{ 'rounded-b-xl pb-4 pt-2.5' if loop.last }} {{ 'py-2.5' if not (loop.first or loop.last) }}">
-          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
           <p class="text-pretty">{{ chapter.data.ingress | safe }}</p>
@@ -43,7 +43,7 @@ permalink: 'produkt/pleiepenger/a/index.html'
 
         {% for chapter in chapters.slice(-1) %}
         <li class="relative grid items-center px-5 py-3.5 mt-2.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
         </li>
