--- a/_excluded/pleiepenger/pleiepenger-c.njk
+++ b/_excluded/pleiepenger/pleiepenger-c.njk
@@ -35,7 +35,7 @@ permalink: 'produkt/pleiepenger/c/index.html'
       <ul class="grid gap-2 mt-2 sm:grid-cols-2 lg:grid-cols-4 sm:-mx-6 lg:mx-0">
         {% for chapter in chapters.slice(0,4) %}
         <li class="relative grid items-start content-start gap-1 px-6 py-5 rounded-lg lg:aspect-[4/5] bg-slate-100 group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
           <p class="text-base text-pretty">{{ chapter.data.ingress | safe }}</p>
@@ -44,7 +44,7 @@ permalink: 'produkt/pleiepenger/c/index.html'
 
         {% for chapter in chapters.slice(-1) %}
         <li class="relative grid sm:col-span-2 lg:col-span-4 items-center px-5 mt-2 py-3.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
         </li>
