--- a/_excluded/pleiepenger/pleiepenger.njk
+++ b/_excluded/pleiepenger/pleiepenger.njk
@@ -99,7 +99,7 @@ permalink: 'produkt/pleiepenger/index.html'
           <ol class="grid gap-2 toc toc--multi toc--sticky">
             {% for chapter in chapters %}
             <li>
-              <a class="flex items-end gap-1 py-1 font-semibold underline hover:no-underline decoration-blue-500" href="#{{ chapter.data.title | slugify }}">
+              <a class="flex items-end gap-1 py-1 font-semibold underline hover:decoration-2 decoration-blue-500" href="#{{ chapter.data.title | slugify }}">
                 <span>{{ chapter.data.title }}</span>
                 <span class="flex-1 h-px min-w-4 -translate-y-[0.375em] bg-dotted-x" aria-hidden="true"></span>
                 {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-7 h-7 p-1 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }}
