--- a/_excluded/soknad/aap/aap.njk
+++ b/_excluded/soknad/aap/aap.njk
@@ -65,7 +65,7 @@
 
           {% if pagination.pageNumber > 0 %}
           <div class="mt-8">
-            <a class="font-semibold text-blue-500 underline hover:no-underline hover:text-deepblue-600" href="/soknad-og-skjema/dagpenger-1/">Tilbake</a>
+            <a class="font-semibold text-blue-500 underline hover:decoration-2 hover:text-deepblue-600" href="/soknad-og-skjema/dagpenger-1/">Tilbake</a>
           </div>
           {% endif %}
         </div>
