--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -18,7 +18,7 @@
             <ul class="mt-2 mb-7 break-inside-avoid">
               {%- for item in section.linkList -%}
                 <li class="py-1 pr-2 break-before-avoid">
-                  <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:no-underline fine:hover:text-orange-200" href="#">{{ item.text }}</a>
+                  <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="#">{{ item.text }}</a>
                 </li>
               {%- endfor -%}
             </ul>
@@ -38,7 +38,7 @@
     <div class="flex flex-col justify-between mt-6 text-sm sm:flex-row-reverse">
       <div class="flex flex-col justify-between gap-3 mt-6 sm:gap-6 sm:flex-row sm:self-end">
         {%- for link in footer.legal -%}
-          <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:no-underline fine:hover:text-orange-200" href="#">{{ link.text }}</a>
+          <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="#">{{ link.text }}</a>
         {%- endfor -%}
       </div>
 
