--- a/src/pages/produkt/sykepenger/sykepenger-2.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-2.njk
@@ -28,7 +28,7 @@ variant: '2'
       <ul class="grid gap-4 py-1">
         {% for chapter in chapters %}
         <li class="grid">
-          <a class="flex gap-1 p-1 -m-1 font-medium text-blue-500 underline group hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}">
+          <a class="flex gap-1 p-1 -m-1 font-medium text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" href="#{{ chapter.data.title | slugify }}">
             {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
             {{ chapter.data.title }}
           </a>
@@ -60,7 +60,7 @@ variant: '2'
           {% for chapter in chapters %}
           <li>
             <a 
-              class="flex gap-1 p-1 underline group text-base/snug hover:no-underline" 
+              class="flex gap-1 p-1 underline group text-base/snug hover:decoration-2" 
               href="#{{ chapter.data.title | slugify }}" 
               x-on:click="expandToc = false"
             >
@@ -71,7 +71,7 @@ variant: '2'
           {% endfor %}
           <li class="pt-2 mt-1 border-t border-slate-400/25">
             <a 
-              class="flex gap-1 p-1 underline group text-base/snug hover:no-underline" 
+              class="flex gap-1 p-1 underline group text-base/snug hover:decoration-2" 
               href="{{ page.url }}" 
               x-on:click="expandToc = false"
             >
@@ -107,7 +107,7 @@ variant: '2'
               <ul class="grid gap-1">
                 {% for item in chapter.templateContent | tocData %}
                 <li>
-                  <a class="flex gap-1 py-1 -mx-1 text-blue-500 underline group hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ item.id }}">
+                  <a class="flex gap-1 py-1 -mx-1 text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" href="#{{ item.id }}">
                     {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
                     {{ item.text }}
                   </a>
