--- a/src/pages/produkt/sykepenger/sykepenger-2.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-2.njk
@@ -29,10 +29,9 @@ variant: '2'
         {% for chapter in chapters %}
         <li class="grid">
           <a class="flex gap-1 p-1 -m-1 font-medium text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" href="#{{ chapter.data.title | slugify }}">
-            {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
+            {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
             {{ chapter.data.title }}
           </a>
-          {# <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span> #}
           <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p>
         </li>
         {% endfor %}
@@ -47,6 +46,7 @@ variant: '2'
       x-transition:enter="transition ease-out duration-200"
       x-transition:enter-start="opacity-0 -translate-y-full"
       x-transition:enter-end="opacity-100 translate-y-0"
+      x-on:click.outside="expandToc = false"
     >
       <button class="relative col-full w-full z-20 px-3 whitespace-nowrap py-1.5 justify-center flex gap-1 items-center bg-slate-100 hover:bg-slate-200" type="button" x-on:click="expandToc = !expandToc">
         <span>Innhold på siden</span>
@@ -58,24 +58,25 @@ variant: '2'
       >
         <ol class="grid gap-2 toc toc--multi toc--sticky">
           {% for chapter in chapters %}
-          <li>
+          <li class="grid">
             <a 
-              class="flex gap-1 p-1 underline group text-base/snug hover:decoration-2" 
+              class="flex gap-1 p-1 -m-1 font-medium text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" 
               href="#{{ chapter.data.title | slugify }}" 
               x-on:click="expandToc = false"
             >
-              {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
+              {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
               {{ chapter.data.title }}
             </a>
+            <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p>
           </li>
           {% endfor %}
-          <li class="pt-2 mt-1 border-t border-slate-400/25">
+          <li class="pt-4 mt-1 border-t border-slate-400/25">
             <a 
-              class="flex gap-1 p-1 underline group text-base/snug hover:decoration-2" 
+              class="flex gap-1 p-1 text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" 
               href="{{ page.url }}" 
               x-on:click="expandToc = false"
             >
-              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
+              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
               Til toppen av siden
             </a>
           </li>
@@ -99,7 +100,6 @@ variant: '2'
       >
         <div class="col-main">
           <h2 class="mt-8 mb-3 font-bold text-xl/tight text-balance ">{{ chapter.data.title }}</h2>
-          <p class="mb-6">{{ chapter.data.ingress | safe }}</p>
 
           {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 %}
             <nav class="px-5 py-3 rounded-lg bg-slate-100">
@@ -108,7 +108,7 @@ variant: '2'
                 {% for item in chapter.templateContent | tocData %}
                 <li>
                   <a class="flex gap-1 py-1 -mx-1 text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" href="#{{ item.id }}">
-                    {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
+                    {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
                     {{ item.text }}
                   </a>
                 </li>
