--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -14,7 +14,7 @@
   <h2 class="flex items-baseline gap-2 mb-2 text-2xl font-semibold sm:gap-4 sm:leading-snug" id="{{ block.title | slugify }}">
     {{ block.title | safe }}
   </h2>
-  <!--<a href="#" class="inline-flex items-center gap-1.5 mt-2 mb-4 text-base text-blue-500 hover:underline hover:text-blue-700">
+  <!--<a href="javascript:void(0);" class="inline-flex items-center gap-1.5 mt-2 mb-4 text-base text-blue-500 hover:underline hover:text-blue-700">
     <span># Kopier lenke</span>
     {# {{ '/src/_includes/svg/icons/link.svg' | svgContents('w-3.5 h-3.5') | safe }} #}
   </a>-->
