--- a/src/_includes/partials/minSide.njk
+++ b/src/_includes/partials/minSide.njk
@@ -6,7 +6,7 @@
       <span class="text-xl font-semibold">Isac Norland</span>
     </p>
     <p>
-      <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-500 px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+      <a href="javascript:void(0);" class="flex items-center gap-2 py-3 -mt-px text-blue-500 px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
         {{ '/src/_includes/svg/icons/user.svg' | svgContents() | safe }}
         <span>Min side</span>
       </a>
@@ -18,7 +18,7 @@
         <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
         <div class="grid gap-1 mt-2">
           {%- for task in minSide.myTasks -%}
-            <a class="grid gap-1 px-3.5 py-3 bg-white rounded-lg shadow-sm fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+            <a class="grid gap-1 px-3.5 py-3 bg-white rounded-lg shadow-sm fine:hover:ring-2 fine:hover:ring-blue-600" href="javascript:void(0);">
               <h3 class="font-semibold leading-snug">{{ task.title | safe }}</h3>
               <p class="text-sm opacity-80">{{ task.timestamp }}</p>
               <div class="flex items-center justify-between mt-2">
@@ -39,7 +39,7 @@
         <h3 class="mt-6 text-sm tracking-wider uppercase opacity-80">Beskjeder</h3>
         <div class="grid gap-1 mt-2">
           {%- for message in minSide.myMessages -%}
-            <a class="px-3.5 py-3 bg-white rounded-md shadow-sm fine:hover:ring-2 fine:hover:ring-blue-600" href="#">
+            <a class="px-3.5 py-3 bg-white rounded-md shadow-sm fine:hover:ring-2 fine:hover:ring-blue-600" href="javascript:void(0);">
               <div>
                 <h3 class="font-semibold leading-snug">{{ message.title | safe }}</h3>
                 <p class="text-sm opacity-80">{{ message.timestamp }}</p>
