--- a/src/pages/sok/sok.njk
+++ b/src/pages/sok/sok.njk
@@ -125,7 +125,7 @@ permalink: false
         <div class="grid mt-2">
           {%- for item in range(1,10) -%}
             <article class="pt-5 pb-4 border-t border-gray-200">
-              <h3><a class="text-2xl font-semibold leading-tight text-blue-500 hover:underline hover:text-blue-700" href="#">Title</a></h3>
+              <h3><a class="text-2xl font-semibold leading-tight text-blue-500 hover:underline hover:text-blue-700" href="javascript:void(0);">Title</a></h3>
               <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
               <p class="mt-0.5 text-base opacity-75">Publisert 01.12.2019</p>
             </article>
