--- a/_excluded/artikkel/artikkel.njk
+++ b/_excluded/artikkel/artikkel.njk
@@ -82,7 +82,7 @@ permalink: false
 
           <p class="mt-7">For mer informasjon, kontakt pressevakten hos NAV på telefon 400 03 144 eller presse@nav.no.</p>
 
-          <p class="mt-7">Les mer <a class="text-blue-500 underline fine:hover:decoration-2" href="javascript:void(0);">om hovedtall for arbeidsmarkedet</a>.</p>
+          <p class="mt-7">Les mer <a class="text-blue-500 underline fine:hover:decoration-2" href="#">om hovedtall for arbeidsmarkedet</a>.</p>
 
           {# Faktaboks #}
           <aside class="px-4 pt-4 pb-5 border-l-4 border-purple-500 mt-7 sm:px-8 sm:pt-8 sm:pb-10" x-data="{ bgPurple: true }" x-on:click="bgPurple = !bgPurple" x-bind:class="bgPurple ? 'bg-purple-50' : 'bg-white'">
@@ -99,12 +99,12 @@ permalink: false
 
               <p class="mt-1">En gjennomgang av data fra meldekortene de arbeidsledige sender inn til NAV, viser at om lag 18 prosent av de delvis ledige har arbeidet mer enn 35 timer i gjennomsnitt de siste to ukene. Andelen i september 2022 er noe lavere enn i september 2021.  Dette vil både være personer som har skiftende arbeidstid og personer som er tilbake i arbeid, men som fremdeles sender inn meldekort. Antallet delvis ledige kan dermed være noe for høyt i statistikken til NAV.</p>
 
-              <p class="mt-7">Les mer <a class="text-blue-500 underline fine:hover:decoration-2" href="javascript:void(0);">om historikk og sammenlignbarhet over tid</a>.</p>
+              <p class="mt-7">Les mer <a class="text-blue-500 underline fine:hover:decoration-2" href="#">om historikk og sammenlignbarhet over tid</a>.</p>
 
               <h3 class="text-xl font-semibold text-gray-900 mt-7">Sesongjustering</h3>
 
               <p class="mt-1">Arbeidsledigheten følger gjerne et fast mønster gjennom året, såkalte sesongvariasjoner. For eksempel øker alltid arbeidsledigheten fra desember til januar, på grunn av at mange kontrakter går ut ved nyttår. Den øker også om sommeren når mange nyutdannede skal inn på arbeidsmarkedet. For å korrigere for disse faste svingningene og finne den underliggende trenden på arbeidsmarkedet brukes sesongjusterte tall.</p>
-              <p class="mt-7">Les mer <a class="text-blue-500 underline fine:hover:decoration-2" href="javascript:void(0);">om metoden for sesongjustering</a>.</p>
+              <p class="mt-7">Les mer <a class="text-blue-500 underline fine:hover:decoration-2" href="#">om metoden for sesongjustering</a>.</p>
             </div>
           </aside>
 
