--- a/src/_includes/base-basic.njk
+++ b/src/_includes/base-basic.njk
@@ -64,8 +64,8 @@
 
     <footer class="grid self-end pt-6 pb-12 text-lg text-blue-500 bg-white border-t-2 border-blue-800 grid-cols-layout">
       <div class="grid gap-x-12 gap-y-2 sm:flex col-wide">
-        <a class="underline" href="javascript:void(0);">Personvern og informasjonskapsler</a>
-        <a class="mr-auto underline" href="javascript:void(0);">Tilgjengelighet</a>
+        <a class="underline" href="#">Personvern og informasjonskapsler</a>
+        <a class="mr-auto underline" href="#">Tilgjengelighet</a>
         <button type="button" class="inline-flex items-center gap-2 underline">
           <span>Del skjerm med veileder</span>
           {{ "/src/_includes/svg/icons/display.svg" | svgContents("w-6 h-6") | safe }}
