--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer class="grid pb-12 text-white bg-deepblue-800 grid-cols-left-1 lg:grid-cols-left-2" x-bind:inert="menuOpen || notifyOpen">
   <div class="col-wide">
     <div class="flex flex-col items-center py-3">
-      <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="javascript:void(0);">
+      <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
         <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
           <path stroke="currentColor" stroke-width="2" d="m7 9 6-6 6 6m-6 10V4" />
         </svg>
@@ -18,7 +18,7 @@
             <ul class="mt-2 mb-7 break-inside-avoid">
               {%- for item in section.linkList -%}
                 <li class="py-1 pr-2 break-before-avoid">
-                  <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="javascript:void(0);">{{ item.text }}</a>
+                  <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="#">{{ item.text }}</a>
                 </li>
               {%- endfor -%}
             </ul>
@@ -26,7 +26,7 @@
         {%- endfor -%}
 
         <div class="-mt-2.5">
-          <a href="javascript:void(0);" class="inline-flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 fine:hover:border-deepblue-400/50 fine:hover:bg-deepblue-600 rounded fine:hover:shadow-lg fine:hover:text-orange-200">
+          <a href="#" class="inline-flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 fine:hover:border-deepblue-400/50 fine:hover:bg-deepblue-600 rounded fine:hover:shadow-lg fine:hover:text-orange-200">
             <span class="">{{ footer.screenshare.text }}</span>
             {{ footer.screenshare.icon | svgContents("w-5 h-5") | safe }}
           </a>
@@ -38,12 +38,12 @@
     <div class="flex flex-col justify-between mt-6 text-sm sm:flex-row-reverse">
       <div class="flex flex-col justify-between gap-3 mt-6 sm:gap-6 sm:flex-row sm:self-end">
         {%- for link in footer.legal -%}
-          <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="javascript:void(0);">{{ link.text }}</a>
+          <a class="underline underline-offset-2 decoration-blue-300/70 fine:hover:decoration-2 fine:hover:text-orange-200" href="#">{{ link.text }}</a>
         {%- endfor -%}
       </div>
 
       <div class="grid gap-2 mt-16">
-        <a href="javascript:void(0);" class="cursor-pointer">
+        <a href="#" class="cursor-pointer">
           {{ '/src/_includes/svg/logo.svg' | svgContents('h-6') | safe }}
           <span class="sr-only">NAV</span>
         </a>
