--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -29,7 +29,7 @@
   <body
     id="toppen" class="min-h-full text-base leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, loggedIn: false, loginOpen: false, menuOpen: false, notifyOpen: false, newNotifications: true }">
     {%- if environment === 'production' -%}
-    {%- include "partials/banner.njk" -%}
+    {# {%- include "partials/banner.njk" -%} #}
     {%- endif -%}
 
     {%- include "partials/header.njk" -%}
